Fixes review spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -359,7 +359,8 @@ textarea {
   }
 
   .comment {
-    @include makeColumn(6.5)
+    @include makeColumn(6.5);
+    margin-bottom: 10px;
   }
 
   ul.ratings {
